deployment/dual-tier/manifest/all-in-one-dual-tier-demo.yaml
# - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - #
#                          Pre-requisites:                            #
# - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - #
# Fill this value with the VIP of the Tier-1 VPX/CPX
# value : "<VIP of the Tier-1 VPX>"
#
# Fill this value with the NetScaler IP of the Tier-1 VPX/MPX
# value: "<NSIP of the Tier-1 VPX>"
# - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - #
# - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - #

apiVersion: apps/v1
kind: Deployment
metadata:
  name: apache
  labels:
      name: apache
spec:
  selector:
    matchLabels:
      app: apache
  replicas: 6
  template:
    metadata:
      labels:
        app: apache
    spec:
      containers:
      - name: apache
        image: httpd:latest
        ports:
        - containerPort: 80

---

apiVersion: v1
kind: Service
metadata:
  name: apache
spec:
  ports:
  - port: 80
    targetPort: 80
  selector:
    app: apache

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: cpx-ingress
  labels:
    name: cpx-ingress
    app: cpx-ingress
spec:
  selector:
    matchLabels:
      app: cpx-ingress
  replicas: 1
  template:
    metadata:
      name: cpx-ingress
      labels:
        app: cpx-ingress
    spec:
      serviceAccountName: cpx-ingress-k8s-role
      containers:
        - name: cpx-ingress
          image: quay.io/netscaler/netscaler-cpx:14.1-66.59
          tty: true
          securityContext:
             privileged: true
          imagePullPolicy: Always
          volumeMounts:
            - mountPath: /var/deviceinfo
              name: shared-data
            - mountPath: /cpx/
              name: cpx-volume
            - mountPath: /cpx/conf
              name: cpx-volume-conf
        # Add cic as a sidecar
        - name: cic
          image: quay.io/netscaler/netscaler-k8s-ingress-controller:4.2.26
          volumeMounts:
          - mountPath: /var/deviceinfo
            name: shared-data
          args:
          - --ingress-classes tier-2-cpx
          imagePullPolicy: Always
      volumes:
      - name: shared-data
        emptyDir: {}
      - name: cpx-volume
        emptyDir: {}
      - name: cpx-volume-conf
        emptyDir: {}
---

apiVersion: v1
kind: Service
metadata:
  name: cpx-service
  labels:
    app: cpx-service
spec:
  type: NodePort
  ports:
  - port: 80
    protocol: TCP
    name: http
  - port: 443
    protocol: TCP
    name: https
  selector:
    app: cpx-ingress

---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations: {}
  name: citrix-ingress
spec:
  ingressClassName: tier-2-cpx
  rules:
  - host: citrix-ingress.com
    http:
      paths:
      - backend:
          service:
            name: apache
            port:
              number: 80
        path: /
        pathType: Prefix

---

apiVersion: networking.k8s.io/v1
kind: IngressClass
metadata:
  name: tier-2-cpx
spec:
  controller: citrix.com/ingress-controller

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: cic-k8s-ingress-controller
spec:
  selector:
    matchLabels:
      app: cic-k8s-ingress-controller
  replicas: 1
  template:
    metadata:
      name: cic-k8s-ingress-controller
      labels:
        app: cic-k8s-ingress-controller
      annotations:
    spec:
      serviceAccountName: cic-k8s-role
      containers:
      - name: cic-k8s-ingress-controller
        image: "quay.io/netscaler/netscaler-k8s-ingress-controller:4.2.26"
        args:
          - --ingress-classes tier-1-vpx
          - --feature-node-watch true
        imagePullPolicy: Always

---

apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  annotations: {}
  name: vpx-ingress
spec:
  ingressClassName: tier-2-vpx
  rules:
  - host: citrix-ingress.com
    http:
      paths:
      - backend:
          service:
            name: cpx-service
            port:
              number: 80
        path: /
        pathType: Prefix
---
apiVersion: networking.k8s.io/v1
kind: IngressClass
metadata:
  name: tier-2-vpx
spec:
  controller: citrix.com/ingress-controller
---
